# beating_heart_of_art

./: .gitignore  .python-version  Dockerfile  Makefile  README.md  docker-build.sh  docker-run.sh  requirements-local.txt  requirements.txt  todo.md
lib/common/: pyproject.toml
lib/common/common/: __init__.py  hello_universe.py
notebooks/: Golnaz_moma_collection.ipynb  pyproject.toml
projects/: data_collection.py
projects/api/: .env  .env.sample  README.md  README.me  api.py  fastapi.py  pyproject.toml
projects/database/: add_csv.py  database.py  pyproject.toml  test.py  update_csv.py
projects/database/database/: database.py
projects/frontend/: .env  .env.example  .env.local  Dockerfile  README.md  docker-build.sh  docker-compose.yaml  docker-enter.sh  docker-run.sh  pyproject.toml
projects/frontend/app/: app.py  app2.py  prediction_dummy.json
projects/frontend/nginx/conf/: project.conf
projects/interface/: README.md  data_collection.py  feature_extraction.py  main.py  metropolitan_collection.py  moma_collection.py  pyproject.toml
projects/interface/interface/: feature_extraction.py  main.py
projects/interface/resources/: Untitled.ipynb  all_pca.pkl
projects/ml-test/: README.md  pyproject.toml
projects/ml-test/cluster-images-based-on-visual-similarity/: main.py
projects/vit/: cats_and_dogs.ipynb  pyproject.toml  simple_vit.py
resources/: features.pkl  filenames.pkl
resources/objectid.3000/: pca.pkl
