[tool.poetry]
name = "vit"
version = "0.1.0"
description = "Vision Transformer for imagage recognistion of paintings."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
